# wechat-robot

./: README.md
wechat-client/: Cargo.toml
wechat-client/src/: main.rs
wechat-server/: .gitignore  Cargo.toml
wechat-server/src/: entity.rs  main.rs  robot.rs
