[package]
name = "wechat-server"
version = "0.1.0"
authors = ["Jia Ye <planet0104@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inline-python = "0.7.1"
tungstenite = "0.15.0"
once_cell = "1.8.0"
anyhow = "1"
image = "0.23.14"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
bincode = "2.0.0-alpha.0"
brotli = "3.3.2"
rqrr = "0.3.2"

[dependencies.pyo3]
version = "0.14.5"
features = ["auto-initialize"]